--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# LRR Annotator\n",
     "\n",
-    "Below is example usage of our LRR annotator. \n"
+    "Below is example usage of the LRR annotator. \n",
+    "\n",
+    "The `Loader`, `Analyzer`, and `Plotter` objects load PDB files from disk, analyze them / perform regressions, and produce winding number plots.\n",
+    "\n",
+    "Make sure to `pip install -e .` from the directory containing `setup.py` before running this code. (Recommended to do this inside a Conda environment, or virtual environment,\n",
+    "so that dependencies installed don't interfere with your existing `pip`). "
    ]
   },
   {
@@ -17,9 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "from loader import Loader\n",
-    "from analyzer import Analyzer\n",
-    "from plotter import Plotter"
+    "from lrr_annot import Loader, Analyzer, Plotter"
    ]
   },
   {
@@ -74,13 +77,6 @@
    "source": [
     "P.plot_regressions(save = True, directory = './plots')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
