Encapsulating loading bfactor within the Loader class

--- a/figures/ClippedRelu.ipynb
+++ b/figures/ClippedRelu.ipynb
@@ -56,19 +56,13 @@
     "loader = Loader()\n",
     "loader.load_single(\"../data/a_thaliana_other\", f\"{protid}.pdb\")\n",
     "X = loader.structures[protid]\n",
+    "bfactor = loader.bfactors[protid]\n",
     "winding_res = compute_winding(X)\n",
     "winding = winding_res[\"winding\"]\n",
     "\n",
     "regression_res = compute_regression(winding, n_breakpoints=2)\n",
     "breakpoints = regression_res[\"breakpoints\"]\n",
-    "slope = regression_res[\"slope\"]\n",
-    "\n",
-    "\n",
-    "from Bio.PDB import PDBParser\n",
-    "parser = PDBParser()\n",
-    "path = f'../data/a_thaliana_other/{protid}.pdb'\n",
-    "chain = next(parser.get_structure('', path).get_chains())\n",
-    "bfactor = np.array([residue[\"CA\"].get_bfactor() for residue in chain.get_residues()])"
+    "slope = regression_res[\"slope\"]"
    ]
   },
   {
@@ -80,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a2cd5989d10>"
+       "<matplotlib.legend.Legend at 0x78aa48eb8790>"
       ]
      },
      "execution_count": 3,
