Adding discrepancy code, fixing a bug in the regression, and changing batch computation to use 2 breakpoints by default, then 4 breakpoints if the standard deviation exceeds some threshold

--- a/figures/StandardDeviations.ipynb
+++ b/figures/StandardDeviations.ipynb
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading PDBs: 100%|███████████████████████████| 127/127 [00:07<00:00, 17.72it/s]\n"
+      "Loading PDBs: 100%|███████████████████████████| 127/127 [00:07<00:00, 17.65it/s]\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing windings: 100%|█████████████████████| 127/127 [00:02<00:00, 58.34it/s]\n"
+      "Computing windings: 100%|█████████████████████| 127/127 [00:02<00:00, 55.07it/s]\n"
      ]
     }
    ],
@@ -68,22 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ffb1bdb4-5df9-4e09-92e7-7d6c88f8fea1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Computing regressions: 100%|██████████████████| 127/127 [03:55<00:00,  1.85s/it]\n",
-      "Computing stds: 100%|██████████████████████| 127/127 [00:00<00:00, 34638.87it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "analyzer.compute_regressions(n_breakpoints=2)\n",
-    "analyzer.compute_lrr_stds()"
+    "analyzer.compute_regressions()"
    ]
   },
   {
