Discrepancy evaluation code is in place, but there seems to be a bug with discrepancy computation

--- a/figures/Evaluation.ipynb
+++ b/figures/Evaluation.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "7bca87f2-f606-478f-9aaf-c920a77d1811",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -18,18 +27,58 @@
     "                 \n",
     "import numpy as np\n",
     "from scipy import signal\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "from mayavi import mlab\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from lrr_annot.loader import Loader\n",
-    "from lrr_annot.analyzer import Analyzer\n",
+    "from lrr_annot.analyzer import Analyzer, compute_lrr_discrepancy\n",
     "from lrr_annot.plotter import plot_regression, plot_residue_annotations_3d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45aae559-5a1b-4a7c-80ab-c1ec915953c6",
+   "metadata": {},
+   "source": [
+    "### Load in LRR-Predict results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "b4b38b82-e009-4d30-a683-c5ad826426e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = pd.read_csv(\"../data/col-0-nlrome.csv\", sep=\"\\t\")\n",
+    "labels = [s.split(\"Athaliana_\")[1] for s in res[\"annotation\"].values]\n",
+    "starts = [int(s) for s in res[\"start\"].values]\n",
+    "predictions = {}\n",
+    "for l, s in zip(labels, starts):\n",
+    "    l = l.replace(\"_\", \".\")\n",
+    "    if not l in predictions:\n",
+    "        predictions[l] = []\n",
+    "    predictions[l].append(s)\n",
+    "for l, p in predictions.items():\n",
+    "    predictions[l] = np.sort(np.array(p, dtype=int))\n",
+    "\n",
+    "proteins = set([s.split(\"/\")[-1].split(\".pdb\")[0] for s in glob.glob(\"../data/a_thaliana_alpha/*\")])\n",
+    "predictions = {key:value for key, value in predictions.items() if key in proteins}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7431f15c-f26d-4987-b5cc-4bff8023c565",
+   "metadata": {},
+   "source": [
+    "### Compute parallel transport-based winding number and standard deviations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "81a7f7d3-08a8-41eb-b6e9-7ecc68057b01",
    "metadata": {},
    "outputs": [
@@ -37,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading PDBs: 100%|███████████████████████████| 127/127 [00:07<00:00, 17.65it/s]\n"
+      "Loading PDBs: 100%|███████████████████████████| 127/127 [00:07<00:00, 18.02it/s]\n"
      ]
     }
    ],
@@ -48,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6e03f430-d4e7-4e11-916d-f62b0406fbf2",
    "metadata": {},
    "outputs": [
@@ -56,7 +105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing windings: 100%|█████████████████████| 127/127 [00:02<00:00, 55.07it/s]\n"
+      "Computing windings: 100%|█████████████████████| 127/127 [00:02<00:00, 59.62it/s]\n"
      ]
     }
    ],
@@ -68,17 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ffb1bdb4-5df9-4e09-92e7-7d6c88f8fea1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing regressions: 100%|██████████████████| 127/127 [04:27<00:00,  2.11s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "analyzer.compute_regressions()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8b97c0d5-393b-4562-9179-b24742f3cfd8",
    "metadata": {},
    "outputs": [
@@ -105,9 +162,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fe80441-076e-434d-9f4c-a331a9880aa1",
+   "metadata": {},
+   "source": [
+    "### Compute Laplacian windings and compare discrepancies to parallel winding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bf38c284-e892-4934-bdbe-1343e5922da3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing regressions: 100%|██████████████████| 127/127 [00:06<00:00, 19.75it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyzer.compute_lrr_windings_laplacian()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c13eb9-2c41-4fd5-9d13-e39bd341996b",
+   "id": "56a4cb65-b35c-4227-8090-7e76b35cf35b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discrepancies_parallel = np.zeros(len(proteins))\n",
+    "discrepancies_laplace = np.zeros(len(proteins))\n",
+    "for i, p in enumerate(proteins):\n",
+    "    winding = analyzer.windings[p]\n",
+    "    [a, b] = analyzer.lrr_endpoints[p]\n",
+    "    pred = predictions[p]\n",
+    "    lwinding = np.zeros_like(winding)\n",
+    "    lwinding[a:b] = analyzer.lrr_windings_laplacian[p]\n",
+    "\n",
+    "    discrepancies_parallel[i] = compute_lrr_discrepancy(winding, pred, a, b)\n",
+    "    discrepancies_laplace[i] = compute_lrr_discrepancy(lwinding, pred, a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a4cd4eb-383d-436c-a3e5-3d978a0c31b4",
    "metadata": {},
    "outputs": [],
    "source": []
